# sorume-server

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build-docker-image.yml
documentation/: logging.md
src/: Cargo.toml
src/api/: Cargo.toml
src/api/src/: lib.rs  logger.rs  openapi.rs
src/api/src/api_models/: create.rs  group_chat_member_schema.rs  group_chat_message_schema.rs  group_chat_schema.rs  mod.rs  private_message_schema.rs  profile_schema.rs  read.rs  update.rs
src/api/src/services/: group_chat_members_service.rs  group_chat_message_service.rs  group_chat_service.rs  mod.rs  private_message_service.rs  profile_service.rs
src/database/: Cargo.toml
src/database/src/: connection.rs  group_chat_member_operations.rs  group_chat_message_operations.rs  group_chat_operations.rs  lib.rs  private_message_operations.rs  profile_operations.rs
src/entities/: Cargo.toml  README.md
src/entities/src/: group_chat.rs  group_chat_member.rs  group_chat_message.rs  lib.rs  mod.rs  prelude.rs  private_message.rs  profile.rs
src/migration/: Cargo.toml
src/migration/src/: lib.rs  m20230511_212747_create_initial_tables.rs  m20230804_181132_add_displayname_to_profile.rs
src/migrations/2023-05-11-212747_initial/: down.sql  up.sql
src/migrations/2023-06-15-190900_add_private_message_content/: up.sql
src/src/: main.rs
