[package]
name = "sorume-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = [".", "api", "database", "entitites", "migration"]

[dependencies]
sea-orm = { version = "0.12", default-features = false, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono" ] }
futures = "0.3.28"
api = { path = "api" }
migration = { path = "migration" }
database = { path = "database" }
