[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
futures = "0.3.21"
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", "with-chrono" ] }
dotenvy = "0.15"
log = "0.4.19"
entities = { path = "../entities" }
